# box-edit-core

./: .gitignore  CMakeLists.txt  Cargo.toml  bp3d-package.toml  build.lua  build.rs
BPXEdit/: CMakeLists.txt
BPXEdit/BPXEdit/: BPXContainer.h  BPXContainer.m  BPXEdit.h  BPXSection.h  BPXSection.m  BPXStream.h  BPXStream.m  BPXStrings.h  BPXStrings.m  BPXTable.h  BPXTable.m  BPXValue.h  BPXValue.m  DataStream.h  NSDataStream.h  Util.h  Util.m
BPXEdit/BPXEdit.xcodeproj/: project.pbxproj
BPXEdit/BPXEdit.xcodeproj/project.xcworkspace/xcuserdata/yuri.xcuserdatad/: UserInterfaceState.xcuserstate
BPXEdit/BPXEdit.xcodeproj/xcuserdata/yuri.xcuserdatad/xcschemes/: xcschememanagement.plist
BPXEdit/BPXEdit/BPXEdit.docc/: BPXEdit.md
BPXEdit/BPXEditTests/: BPXEditTests.m  BPXEditTests.swift
BPXEdit/include/BPXEdit/: BPXContainer.h  BPXEdit.h  BPXSection.h  BPXSection.m  BPXStream.h  BPXTable.h  BPXValue.h  DataStream.h  NSDataStream.h  Util.h
BPXEdit/src/: BPXContainer.m  BPXSection.m  BPXStream.m  BPXTable.m  BPXValue.m  NSDataStream.m  Util.m
bp3d-build/: BPXEdit.lua
bp3d-build/package/: dist.lua
core/: Cargo.toml  build.rs
core/include/BPXEditCore/: bpxsd.h  common.h  container.h  error.h  marker.h  section.h  stream.h  strings.h  tree.h  value.h
core/include/BPXEditCore/table/: core.h  row.h
core/include/BPXEditCore/tree/: tree.h
core/src/: bpxsd.rs  common.rs  container.rs  error.rs  lib.rs  section.rs  stream.rs  strings.rs
core/src/table/: core.rs  mod.rs  row.rs
core/src/tree/: interface.rs  mod.rs  model.rs  util.rs
include/bpx/: common.h  container.h  error.h  stream.h
lib/: Cargo.toml
lib/include/BPXEditCore/: common.h  container.h  error.h  marker.h  section.h  stream.h
lib/src/: common.rs  data_stream.rs  error.rs  lib.rs  lua_binding.rs  section.rs  stream.rs
lib/src/tree/: interface.rs  mod.rs
src/: common.rs  container.rs  lib.rs  main.c  stream.rs  util.rs
test/: CMakeLists.txt  main.c
