[package]
name = "bpxbridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["sharedlib"]

[dependencies]
objc2 = "0.5.0"
icrate = { version = "0.1.0", features = ["Foundation_all"] }
bpx = { version = "4.0.0-rc.11.0.1", features = ["sd"] }
mlua = { version = "0.9.5", default-features = false, features = ["vendored", "luau"] }
