[package]
name = "bpx-edit-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
bpx = { version = "4.0.0-rc.13.0.0", features = ["sd"] }
safer-ffi = { version = "0.2.0-alpha.0", features = ["alloc", "dyn-traits"] }
bp3d-sdk-util = { git = "https://github.com/BlockProject3D/sdk.build-tools.git" }

[bp3d-package]
name = "BPXEditCore"
includes = "include/BPXEditCore"
identifier = "com.github.BPXEditCore"
